--- a/index.html
+++ b/index.html
@@ -4,24 +4,25 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" type="text/css" href="/style.css" />
+        <link rel="stylesheet" type="text/css" href="./style.css" />
         <title>three pictures</title>
     </head>
     <body>
-        <div class="center">
-            <img class="fixed-size" src="/imgs/html_img.png" alt="HTML5">
-            <p>This Image for HTML5</p>
-        </div>
+
+        <center>
+            <img class="fixed-size" src="./imgs/html_img.png" alt="HTML5">
+            <br>
+            <h3>This Image for HTML5</h3>
+            <br> <br>
+            <img class="fixed-size" src="./imgs/css_img.png" alt="CSS3">
+            <br>
+            <h3>This Image for CSS3</3>
+        </center>
         
-        <div class="center">
-            <img class="fixed-size" src="/imgs/css_img.png" alt="CSS3">
-            <p>This Image for CSS3</p>
-        </div>
-        
-        <div>
-            <img class="fixed-size" src="/imgs/js.png" alt="JS">
-            <p>This Image for Javascript</p>
-        </div>
-        <script src="/app.js"></script>
+        <img class="fixed-size" src="./imgs/js.png" alt="JS">
+        <br>
+        <h3>This Image for Javascript</h3>
+
+        <script src="./app.js"></script>
     </body>
 </html>
